--- a/Algorithm of MO/MainWindow.xaml
+++ b/Algorithm of MO/MainWindow.xaml
@@ -8,6 +8,7 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Button Content="start" HorizontalAlignment="Left" Margin="331,221,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Caculate" HorizontalAlignment="Left" Margin="545,221,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
 
     </Grid>
 </Window>
