--- a/Algorithm of MO/MainWindow.xaml
+++ b/Algorithm of MO/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button Content="start" HorizontalAlignment="Left" Margin="331,221,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Button Content="Caculate" HorizontalAlignment="Left" Margin="545,221,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="two al" HorizontalAlignment="Left" Margin="128,221,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
 
     </Grid>
 </Window>
